mdapipkg/unpackaged/objects/EAS_LMS_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_Non_Billd__c</fullName>
        <label>Billed/Non Billed</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_Subttl_Min__c</fullName>
        <label>Billed Subtotal Minutes</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billed_Subttl_Msg__c</fullName>
        <label>Billed Subtotal Message</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Number__c</fullName>
        <label>Billing Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Library_id__c</fullName>
        <label>Library id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Messages__c</fullName>
        <label>Messages</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <label>Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Seq_Number__c</fullName>
        <label>Sequence Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starting_Date__c</fullName>
        <label>Starting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>To_NPA_NXX__c</fullName>
        <label>To NPA/NXX</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNBil_Sbttl_Min__c</fullName>
        <label>UNBilled Subtotal Minutes</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNBil_Sbttl_Msg__c</fullName>
        <label>UNBilled Subtotal Message</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>EAS/LMS Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EAS/LMS Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EAS/LMS Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>